# volume-mesh-benchmarks

./: .gitignore  CMakeLists.txt  README.md  h5_to_vtu.py  mesh_metrics.py  mesh_metrics_fluent.py  paraview_mesh_metrics.py  paraview_mesh_metrics_fluent.py  requirements.txt  test_solver  test_solver_CPU  test_solver_CPU.cpp  test_solver_GPU.cu
TetGen/: NOTES.md  README.md  plot_results.py  tetgen_to_vtu.py  tetgen_volume_mesh_demo.py
TetGen/tetgen/: CHANGELOG.md
TetGen/tetwrap/: CMakeLists.txt  __init__.py  mesh_boundary_facets.py  switches.py  tetwrap.cpp  tetwrap.hpp  tetwrap.py
benchmarks/: benchmark_plots.ipynb
dtcc/: boundary_face_markers.py  build_volume_mesh.py  build_volume_mesh_gbg.py  build_volume_mesh_test.py  dtccVolumeMesh.py  dtcc_volume_mesh_runs.py  gbg_build_city_model_with_data.py  gbg_build_surface_mesh.py  gbg_build_volume_mesh.py  test_build_volume_mesh.py  utils.py
fenics/: README.md  demo_poisson.py  fenics.py  gbg_advdiff.py  gbg_helmholtz.py  gbg_poisson.py  gbg_wave.py  resample_flowfield.py  test_facet_markers.py
figures/sources/: tet_plot.py
gmsh/: gmsh_demo.py
gmsh/src/: gmshVolumeMesh.py  utils.py
scripts/: paraview_mesh_metrics.py
testcases/flooding/: darcy_toy_problems.py
testcases/pathfinding/: drone_pathfinder_models.pkl  my_drone_path.csv  my_drone_path.ply  my_drone_path.vtk  nohup.out  pathfinder-claude-ML.py  pathfinder-o1.py  pathfinder-run.py  pathfinder_GPU.py  pathfinder_ML.py  pathfinder_non_ML.py
